--- a/css/home.css
+++ b/css/home.css
@@ -1,15 +1,12 @@
-.col1{
-	text-transform: uppercase;
-	text-align: right;
-	font-size: 150%;
-}
-.col2{
-	text-align: left;
-	font-size: 150%;
-}
+
 .navbar{
-	
+
 }
 .navbar-brand {
 
 }
+.navbar-nav{
+
+
+}
+
